# SimpleDFA

./: .gitignore  CMakeLists.txt  README.md
DFAPass/: CMakeLists.txt  DFA-pass.cpp  instr.cpp  logger_cc.c
DotPatcher/: CMakeLists.txt  patcher.cpp  patcher.h  patcher_main.cpp
tests/: test-modules.cpp  test-modules.cpp_def-use_dump.dot  test-modules.h  test.cpp  test.cpp_def-use_dump.dot
